--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin: 0;
+}
+/*  colormind.io */
+*,
+*::after,
+*::before {
+  /* this makes the box not include extra size when adding "padding" */
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --page-padding: 1.2rem 10rem;
+  --gap: 1rem;
+  --padding: 1.2rem;
+  --border-radius: 5px;
+   /* COLORS */
+  --light-shades: #f3f3f4;
+  --main-brand: #1693ac;
+  --dark-accent: #333;
+  --dark-shades: #232824;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+html{
+  scroll-behavior: smooth;
+}
+
+.background-animation {
+  background: linear-gradient(
+    -45deg,
+    var(--light-shades),
+    var(--dark-shades),
+    var(--dark-accent)
+  );
+  background-size: 400% 400%;
+  animation: gradient 4s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 768px) { 
+  :root {
+    --page-padding: 1rem 2rem;
   }
-  to {
-    transform: rotate(360deg);
+  .navbar-container{
+    flex-direction: column;
+    gap: var(--gap);
+  }
+  .navbar-links-container{
+    flex-direction: column;
+  }
+  .aboutme-container{
+    flex-direction: column;
   }
 }
+
