--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -7,3 +7,9 @@
     letter-spacing: 1px;
     font-size: 1.2rem;
   }
+
+.highlighted-btn:hover{
+ 
+    background-color: cornsilk ;
+    color: #111;
+}
