--- a/src/screens/Portfolio/Portfolio.css
+++ b/src/screens/Portfolio/Portfolio.css
@@ -1,5 +1,6 @@
 .portfolio-container {
     padding: var(--page-padding);
+    background-color: azure;
     display: flex;
     flex-direction: column;
     align-items: center;
